[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "1.0.0"
authors = [{ name = "Nicholas Hansen", email = "ndhansen@leskat.net" }]
description = "Advent of Code 2023"
requires-python = ">=3.10"
dependencies = ["parse", "tqdm", "modint"]

[project.optional-dependencies]
dev = [
  "pudb",
  "bpython",
  "mypy",
  "ruff",
  "black",
  "isort",
  "pytest",
  "types-tqdm",
]

[tool.isort]
known_first_party = ["aoc"]
skip_gitignore = true
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["parse", ""]
ignore_missing_imports = true
